<resources>
    <string name="app_name">Project Application</string>
    <string name="textSatu">Gereja St. Maria Assumpta Pakem</string>
    <string name="textDua">Alamat : Jln. Kumetiran 13 YOGYAKARTA – 55272 Telp. 0274 – 512817, 518586 Pastoran Katolik Kumetiran</string>
    <string name="textTiga">Gereja Santa Maria Tak Bercela Kumetiran</string>
    <string name="textLogout">LOGOUT</string>
    <string name="textLima">Alamat : Gubug, Argosari, Pos Sedayu, Bantul YOGYAKARTA – 55752 Telp. 0274 – 7487751 Pastoran Katolik Sedayu</string>
    <string name="textEnam">GEREJA KATOLIK di DIY</string>
    <string name="textTodo">AKUN</string>
    <string name="imageSatu">HOME</string>
    <string name="textBeranda">Beranda</string>
    <string name="textEmpat">Alamat : Jln. Kaliurang Km 17 Pos Pakem YOGYAKARTA – 55582. Telp. 0274 – 895146 Pastoran Katolik Pakem</string>
    <string name="textTujuh">Gereja Hati Kudus Yesus Ganjuran</string>
    <string name="textDelapan">Alamat : Sumbermulyo, Bambanglipuro, Bantul YOGYAKARTA – 55764 Telp. 0274 – 367154 Pastoran Katolik Ganjuran</string>
    <string name="textSembilan">Gereja St. Theresia Sedayu</string>
    <string name="textBtnProf">PROFILE</string>
    <string name="textJudul">Catholic_Visitors</string>
    <string name="gambarGereja">GAMBAR GEREJA</string>
    <string name="textPassword">PASSWORD</string>
    <string name="textLogin">LOGIN</string>
    <string name="textUsername">USERNAME</string>
    <string name="gerejakumetiran">Gereja St. Maria Kumetiran</string>
    <string name="gereja_ganjuran">Gereja Ganjuran</string>
    <string name="gereja_sedayu">Gereja Sedayu</string>
    <string name="gereja_kaliurang">Gereja Kaliurang</string>
    <string name="gambar_profile">Gambar Profile</string>
    <string name="logokampus">LogoKampus</string>
    <string name="judulProfile">Developer Profile</string>
    <string name="textNama">Nama : Grace Anna Fitri Sinaga</string>
    <string name="textNim">NIM : 203110028</string>
    <string name="textStatus">Status : Mahasiswi</string>
    <string name="textJurusan">Jurusan : RPLA</string>
    <string name="back">Back</string>
    <string name="linkedin">LINKEDIN</string>
    <string name="textAbout">about</string>
    <string name="textReward">Reward</string>
    <string name="textAsking">asking</string>
</resources>